--- a/sass/_ddbasic.search.scss
+++ b/sass/_ddbasic.search.scss
@@ -747,6 +747,10 @@ input#edit-search-block-form--2.spinner {
   }
 
   .subjects {
+    .field-items {
+      max-width: 72%;
+    }
+
     // forget that clearfix
     &:after {
       clear: none;
